--- a/accommodations.html
+++ b/accommodations.html
@@ -63,7 +63,7 @@
         </div>
     </main>
     <footer class="bg-primary text-white text-center py-3">
-        <p>C<a class="nav-link" href="contact.html">Contact Us</a> | Social Media | Newsletter Signup</p>
+        <p><a class="nav-link" href="contact.html">Contact Us</a> | Social Media | Newsletter Signup</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
