--- a/about.html
+++ b/about.html
@@ -14,7 +14,6 @@
     <header class="bg-success text-white text-center py-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Taniti Tourism</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -55,6 +54,9 @@
             <h2>Local Government</h2>
             <p>The Tanitian government works closely with local businesses to ensure a safe and enjoyable experience for all visitors. Strict regulations are in place to protect the island’s natural resources and cultural heritage.</p>
         </section>
+        <div class="text-center mt-4">
+            <a href="index.html" class="btn btn-primary">Back to Home</a>
+        </div>
     </main>
 
     <!-- Footer -->
