--- a/accommodations.html
+++ b/accommodations.html
@@ -11,7 +11,6 @@
     <header class="bg-success text-white text-center py-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-               <a class="navbar-brand" href="index.html">Taniti Tourism</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -46,7 +45,7 @@
                     <img src="images/b&b.jpg" class="card-img-top accommodation-img" alt="Bed & Breakfast in Taniti">
                     <div class="card-body">
                         <h5 class="card-title">Bed & Breakfast</h5>
-                        <p class="card-text">Experience local hospitality at a cozy Bed & Breakfast. Enjoy homemade breakfasts and personalized service.</p>
+                        <p class="card-text">Local hospitality at a cozy Bed & Breakfast. Enjoy homemade breakfasts and personalized service.</p>
                         <a href="bed-and-breakfast.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -62,9 +61,15 @@
                 </div>
             </div>
         </div>
+        <div>
+            <div class="text-center mt-4">
+                <a href="price-comparison.html" class="btn btn-primary">Compare Prices</a>
+                <a href="index.html" class="btn btn-primary" class="text-center mt-4">Back to Home</a>
+            </div>
+        </div>
     </main>
     <footer class="bg-primary text-white text-center py-3">
-        <p><a class="nav-link" href="contact.html">Contact Us</a> | Social Media | Newsletter Signup</p>
+        <p>C<a class="nav-link" href="contact.html">Contact Us</a> | Social Media | Newsletter Signup</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
