--- a/attractions.html
+++ b/attractions.html
@@ -11,7 +11,6 @@
     <header class="bg-success text-white text-center py-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Taniti Tourism</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -35,8 +34,8 @@
                 <div class="card">
                     <img src="images/beach.jpg" class="card-img-top attraction-img" alt="Yellow Leaf Bay Beach">
                     <div class="card-body">
-                        <h5 class="card-title">Yellow Leaf Bay Beach</h5>
-                        <p class="card-text">A serene beach perfect for swimming and sunbathing.</p>
+                        <h5 class="card-title">Bay Beach</h5>
+                        <p class="card-text">A serene beach perfect for swimming and sunbathing, The island active volcanoS.</p>
                         <a href="yellow-leaf-beach.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -45,8 +44,8 @@
                 <div class="card">
                     <img src="images/volcano.jpg" class="card-img-top attraction-img" alt="Mount Taniti Volcano">
                     <div class="card-body">
-                        <h5 class="card-title">Mount Taniti Volcano</h5>
-                        <p class="card-text">Experience the thrill of hiking up Mount Taniti, the island’s iconic active volcano.</p>
+                        <h5 class="card-title">Mount Volcano</h5>
+                        <p class="card-text">Experience the thrill of hiking up Mount Taniti, The island active volcano.</p>
                         <a href="mount-taniti-volcano.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -56,11 +55,14 @@
                     <img src="images/rainforest.jpg" class="card-img-top attraction-img" alt="Taniti Rainforest">
                     <div class="card-body">
                         <h5 class="card-title">Taniti Rainforest</h5>
-                        <p class="card-text">Immerse yourself in the beauty of Taniti’s tropical rainforest.</p>
+                        <p class="card-text">Immerse yourself in the beauty of Taniti’s tropical rainforest, the most iconic.</p>
                         <a href="taniti-rainforest.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="text-center mt-4">
+            <a href="index.html" class="btn btn-primary">Back to Home</a>
         </div>
     </main>
     <footer class="bg-primary text-white text-center py-3">
