--- a/bed-and-breakfast.html
+++ b/bed-and-breakfast.html
@@ -11,7 +11,6 @@
     <header class="bg-success text-white text-center py-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Taniti Tourism</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -57,6 +56,7 @@
             </ul>
         </section>
         <a href="booking.html" class="btn btn-primary">Book Now</a>
+        <a href="accommodations.html" class="btn btn-primary" class="text-center mt-4">Back to Accommodations</a>
     </main>
     <footer class="bg-primary text-white text-center py-3">
         <p>C<a class="nav-link" href="contact.html">Contact Us</a> | Social Media | Newsletter Signup</p>
