--- a/booking.html
+++ b/booking.html
@@ -11,7 +11,6 @@
     <header class="bg-success text-white text-center py-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-               <a class="navbar-brand" href="index.html">Taniti Tourism</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,10 +55,22 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </section>
+        <div class="text-center mt-4">
+            <a href="index.html" class="btn btn-primary">Back to Home</a>
+        </div>
     </main>
     <footer class="bg-primary text-white text-center py-3">
         <p><a class="nav-link" href="contact.html">Contact Us</a> | Social Media | Newsletter Signup</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Add this script at the end of the <body> section in booking.html -->
+    <script>
+        document.querySelector('form').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting normally
+            alert('Thank you! Your booking has been successfully submitted.');
+            // Optionally, you can reset the form after submission
+            this.reset();
+        });
+    </script>
 </body>
 </html>
