--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,22 @@
                 <button type="submit" class="btn btn-primary">Send Message</button>
             </form>
         </section>
+        <div class="text-center mt-4">
+            <a href="index.html" class="btn btn-primary">Back to Home</a>
+        </div>
     </main>
     <footer class="bg-primary text-white text-center py-3">
-        <p><a class="nav-link" href="contact.html">Contact Us</a> | Social Media | Newsletter Signup</p>
+        <p>Contact Us | Social Media | Newsletter Signup</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Add this script at the end of the <body> section in contact.html -->
+    <script>
+        document.querySelector('form').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting normally
+            alert('Thank you! Your message has been successfully sent.');
+            // Optionally, you can reset the form after submission
+            this.reset();
+        });
+    </script>
 </body>
 </html>
