--- a/price-comparison.html
+++ b/price-comparison.html
@@ -59,7 +59,7 @@
             </table>
         </section>
         <div class="text-center mt-4">
-            <a href="price-comparison.html" class="btn btn-compare">Compare Prices</a>
+            <a href="accommodations.html" class="btn btn-primary">Back to Accommodations</a>
         </div>
     </main>
     <footer class="bg-primary text-white text-center py-3">
